# PGMax

./: .flake8.config  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  fast-checks.yml  package-checks.yml  precommit.yaml  publish.yaml  slow-checks.yml
docs/: requirements.txt
docs/source/: conf.py  contributing.md  contributing.rst  examples.rst  index.rst  installation.rst  modules.rst  pgmax.bp.rst  pgmax.fg.rst  pgmax.rst
docs/source/_templates/: custom-class-template.rst
examples/: README.md  bu_evidence_extracted.npy  cmrf.py  edge_factors.npy  gmrf.py  heretic_example.py  ising_model.py  new_interface_tests.py  plot_images.py  pmp_binary_deconvolution.py  pmp_convor.py  pool_centers.npy  rbm.py  rcn.py  rcn_example.py  sanity_check_example.py  weights.joblib
examples/example_data/: conv_problem.npz  crbm_mnist_weights_surfaces_pmap002.npz  rbm_mnist.joblib  rcn_100.npz  rcn_20.npz
examples/rcn/: helpers.py  inference_pgmax.py  inference_pgmax_small.py  init_matrix.c  learning.py  load_data.py  mnist_small.py  preproc.py
examples/rcn/model_create/: inference.py  init_matrix.c  learning.py  save_model.py
mpbp_expers/: mp_belief_prop_jax_orig.py
pgmax/: __init__.py  mp_belief_prop_jax_orig.py  utils.py
pgmax/bp/: __init__.py  bp.py  bp_utils.py  infer.py  utils.py
pgmax/contrib/: __init__.py
pgmax/contrib/interface/: datatypes.py  node_classes.py  node_classes_with_factortypes.py
pgmax/contrib/mpbp/: bp_experimentation_guide.md  mp_belief_prop_jax_orig.py  mpbp_varfacnode_array.py  mpbp_varfacnodes.py  mpbp_varfacnodes_unpadded.py  mpbp_varfacnodes_varmsgsize.py  mpbp_varfacnodes_varmsgsize_padded.py  mpbp_varfacnodes_varmsgsize_unpadded.py  mpbp_varmsgsize_unpadded_segsum6.py  mpbp_varnode_array.py  mpbp_varnode_diffdims.py  mpbp_varnode_fac_lowmem.py  optimize_mpbp_unpadded.py  (+1 more)
pgmax/factor/: __init__.py  enum.py  factor.py  logical.py
pgmax/factors/: __init__.py  enumeration.py  logical.py
pgmax/fg/: __init__.py  factor_utils.py  fg_utils.py  graph.py  groups.py  nodes.py  transforms.py
pgmax/fgraph/: __init__.py  fgraph.py
pgmax/fgroup/: __init__.py  enum.py  fgroup.py  logical.py
pgmax/groups/: enumeration.py  logical.py  variables.py
pgmax/infer/: __init__.py  bp.py  bp_state.py  bp_utils.py
pgmax/interface/: __init__.py  datatypes.py
pgmax/vgroup/: __init__.py  varray.py  vdict.py  vgroup.py
test_notebooks/: debug_varmsgsize_unpadded_segsum6.py  new_interface_tests.py  sanity_check_optimize_mpbp_unpadded.py  sanity_check_orig.ipynb  sanity_check_orig.py  sanity_check_var_arr.ipynb  sanity_check_var_arr.py  sanity_check_var_fac_lowmem.ipynb  sanity_check_var_fac_lowmem.py  sanity_check_varfac_arr.py  sanity_check_varfacnodes.ipynb  sanity_check_varfacnodes.py  sanity_check_varfacnodes_unpadded.py  sanity_check_varfacnodes_varmsgsize.py  sanity_check_varfacnodes_varmsgsize_padded.py  sanity_check_varfacnodes_varmsgsize_unpadded.py  sanity_check_varmsgsize_unpadded_segsum6.py  sanity_check_varnode_diffdims.ipynb
tests/: test_examples.py  test_pgmax.py
tests/bp/: test_bputils.py  test_infer.py
tests/factor/: test_and.py  test_factor.py  test_or.py
tests/factors/: test_and.py  test_or.py
tests/fg/: test_graph.py  test_groups.py  test_nodes.py  test_wiring.py
tests/fgraph/: test_fgraph.py
tests/fgroup/: test_fgroup.py  test_wiring.py
tests/interface/: test_datatypes.py
tests/vgroup/: test_vgroup.py
