[tool.poetry]
name = "pgmax"
version = "0.1.0"
description = "Loopy belief propagation for factor graphs on discrete variables, in JAX!"
authors = ["Nishanth Kumar <nkumar@vicarious.com>", "Stannis Zhou <stannis@vicarious.com>"]
# Additional info
license = "MIT"
readme = "README.md"
include = [
    "LICENSE",
]
homepage = "https://github.com/vicariousinc/PGMax"
repository = "https://github.com/vicariousinc/PGMax"
keywords = ["PGMax", "jax"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
jupyter = "^1.0.0"
matplotlib = "^3.4.2"
jax = "^0.2.14"
jaxlib = "^0.1.67"
numpy = "^1.20.3"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.0.0"
pre-commit = "^2.13.0"
jupytext = "^1.11.3"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
